# QTLIBSOCMAKE

./: CMakeLists.txt  CMakeUserPresets.json  QTWidgetAndLib.cpp  QTWidgetAndLib.h  QTWidgetAndLib.ui  main.cpp  打包程序.bat
